Update Assignment-3 notebook for protecting private information

--- a/DP0701-Assignment-3.ipynb
+++ b/DP0701-Assignment-3.ipynb
@@ -688,14 +688,14 @@
      "output_type": "stream",
      "text": [
       "Your credentails:\n",
-      "CLIENT_ID: OUC24JSK0C4LYPU4QIEPB2SZBPPEDZHURGZHS2YI5ZMD3XKS\n",
-      "CLIENT_SECRET:LR0EESN5ZK1H245JUCP4BZQLLZ1BWTJH5HBNSXZALEIITGL2\n"
+      "CLIENT_ID: ************************************************\n",
+      "CLIENT_SECRET:*************************************************\n"
      ]
     }
    ],
    "source": [
-    "CLIENT_ID = 'OUC24JSK0C4LYPU4QIEPB2SZBPPEDZHURGZHS2YI5ZMD3XKS' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'LR0EESN5ZK1H245JUCP4BZQLLZ1BWTJH5HBNSXZALEIITGL2' # your Foursquare Secret\n",
+    "CLIENT_ID = '***********************************************' # your Foursquare ID - replaced for protection\n",
+    "CLIENT_SECRET = '************************************************' # your Foursquare Secret - replaced for protection\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "\n",
     "print('Your credentails:')\n",
